--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=5454
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/trading
 spring.datasource.username=root
-spring.datasource.password=Johnlaxtrivia8+
+spring.datasource.password="${MYSQL_PASSWORD}"
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
